# ChangeLog for app-i18n/im-ja
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.20 2004/05/05 08:44:58 usata Exp $

  05 May 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.8.ebuild,
  im-ja-0.9.ebuild, im-ja-1.0-r1.ebuild, im-ja-1.0-r2.ebuild:
  Stable on x86. Don't assign default to S. Removed old ebuilds.

*im-ja-1.0-r2 (05 Apr 2004)

  05 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.0-r2.ebuild:
  Removed --enable-xim from configure. Closing bug #46755

  01 Apr 2004; David Holm <dholm@gentoo.org> im-ja-1.0-r1.ebuild:
  Added to ~ppc.

*im-ja-1.0-r1 (01 Apr 2004)

  01 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.0-r1.ebuild:
  Fixed IUSE flag handling. Closing bug #46388

*im-ja-1.0 (25 Mar 2004)

  25 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-1.0.ebuild:
  Version bumped. Added anthy and skk local IUSE flags.

  22 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.9-r1.ebuild,
  files/im-ja-0.9-gtk24-gentoo.diff:
  Fixed compilation with gtk+-2.4. Closing bug #45246

  05 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.6.ebuild,
  im-ja-0.7_p2.ebuild, im-ja-0.8.ebuild, im-ja-0.9-r1.ebuild, im-ja-0.9.ebuild:
  Marked stable for x86. Removed old ebuilds.

*im-ja-0.9-r1 (11 Jan 2004)

  11 Jan 2004; <usata@gentoo.org> im-ja-0.9-r1.ebuild:
  Added debug IUSE flag.

  23 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.9.ebuild,
  files/im-ja-0.9-canna-3.7-gentoo.diff:
  Added a patch to fix compile error with canna 3.7. See bug #36313

*im-ja-0.9 (18 Dec 2003)

  18 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.9.ebuild:
  Version bumped

*im-ja-0.9_alpha20031109 (14 Dec 2003)

  14 Dec 2003; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.4.ebuild,
  im-ja-0.5.ebuild, im-ja-0.7_p2.ebuild, im-ja-0.8.ebuild,
  im-ja-0.9_alpha20031109.ebuild:
  Included experimental XIM support. It is masked until 0.9 is released