@@ -1,17 +1,19 @@
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-ja/Attic/im-ja-1.0-r2.ebuild,v 1.2 2004/05/05 08:44:58 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-ja/Attic/im-ja-1.0-r2.ebuild,v 1.3 2004/05/11 15:14:44 usata Exp $
 
 inherit gnome2
 
-IUSE="gnome canna freewnn skk anthy debug"
+IUSE="gnome canna freewnn skk anthy"
+# --enable-debug causes build failure with gtk+-2.4
+#IUSE="${IUSE} debug"
 
 DESCRIPTION="A Japanese input module for GTK2 and XIM"
 HOMEPAGE="http://im-ja.sourceforge.net/"
 SRC_URI="http://im-ja.sourceforge.net/${P}.tar.gz
 	http://im-ja.sourceforge.net/old/${P}.tar.gz"
 LICENSE="GPL-2"
-KEYWORDS="x86 ~sparc ~ppc"
+KEYWORDS="x86 ~sparc ~ppc ~alpha"
 SLOT="0"
 
 DOCS="AUTHORS README ChangeLog TODO"
@@ -32,7 +34,7 @@ RDEPEND="virtual/glibc
 	skk? ( virtual/skkserv )
 	anthy? ( || ( app-i18n/anthy app-i18n/anthy-ss ) )"
 
-use debug && RESTRICT="nostrip"
+#use debug && RESTRICT="nostrip"
 
 src_compile() {
 	local myconf
@@ -44,7 +46,7 @@ src_compile() {
 	use freewnn || myconf="$myconf --disable-wnn"
 	use anthy || myconf="$myconf --disable-anthy"
 	use skk || myconf="$myconf --disable-skk"
-	use debug && myconf="$myconf --enable-debug"
+	#use debug && myconf="$myconf --enable-debug"
 	gnome2_src_compile $myconf || die
 }
 
