@@ -1,6 +1,10 @@
 # ChangeLog for app-i18n/im-ja
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.20 2004/05/05 08:44:58 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/im-ja/ChangeLog,v 1.21 2004/05/11 15:14:44 usata Exp $
+
+  12 May 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.9-r1.ebuild,
+  im-ja-1.0-r2.ebuild:
+  Removed debug IUSE flag. Added to ~alpha
 
   05 May 2004; Mamoru KOMACHI <usata@gentoo.org> im-ja-0.8.ebuild,
   im-ja-0.9.ebuild, im-ja-1.0-r1.ebuild, im-ja-1.0-r2.ebuild:
